--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,8 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "database": "customers_db",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
