--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
-  "name": "FreeLanceProject1",
+  "name": "freelanceproject1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sass": "^1.26.10",
-    "sequelize": "^6.3.1"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.2.0"
-  },
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -20,11 +11,16 @@
     "type": "git",
     "url": "git+https://github.com/yyazdi13/FreeLanceProject1.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yyazdi13/FreeLanceProject1/issues"
   },
-  "homepage": "https://github.com/yyazdi13/FreeLanceProject1#readme"
+  "homepage": "https://github.com/yyazdi13/FreeLanceProject1#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0"
+  }
 }
