--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,9 @@
   },
   "production": {
     "username": "root",
-    "password": "password",
-    "database": "customers_db",
-    "host": "35.226.201.199",
+    "password": null,
+    "database": "database_production",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
