--- a/public/gumdrop/package.json
+++ b/public/gumdrop/package.json
@@ -1,6 +1,10 @@
 {
   "name": "gumdrop",
   "version": "0.0.0",
+  "engine": {
+    "node": "10.16.3",
+    "npm" : "6.9.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
