--- a/public/gumdrop/package.json
+++ b/public/gumdrop/package.json
@@ -1,10 +1,6 @@
 {
   "name": "gumdrop",
   "version": "0.0.0",
-  "engine": {
-    "node": "10.16.3",
-    "npm" : "6.9.0"
-  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -30,7 +26,8 @@
     "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~4.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.1",
@@ -51,6 +48,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines": {
+    "node": "10.16.3",
+    "npm" : "6.9.0"
   },
   "proxy": "http://localhost:3000"
 }
