--- a/public/gumdrop/package.json
+++ b/public/gumdrop/package.json
@@ -11,12 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
+    "@angular-devkit/build-angular": "^0.1001.4",
     "@angular/animations": "~10.1.1",
+    "@angular/cli": "^10.1.4",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
+    "@angular/compiler-cli": "^10.1.4",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
     "@angular/localize": "~10.1.1",
@@ -29,13 +29,10 @@
     "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.3"
+    "typescript": "^4.0.3",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -49,12 +46,11 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   },
   "engines": {
     "node": "10.16.3",
-    "npm" : "6.9.0"
+    "npm": "6.9.0"
   },
   "proxy": "http://localhost:3000"
 }
